<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">简易计算器</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="zero">00</string>
    <string name="zero1">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="pow">x^y</string>
    <string name="symbol">-/+</string>
    <string name="equal">=</string>
    <string name="C">C</string>
    <string name="dot">.</string>
    <string name="sqrt">√x</string>
    <string name="sinx">sinx</string>
    <string name="cosx">cos</string>
    <string name="tanx">tanx</string>

</resources>
