<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/beijin">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:background="@drawable/beijing"
            android:text="@string/zero"
            android:textColor="#FF0000"
            android:textSize="40sp" />

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:gravity="center" >

            <Button
                android:id="@+id/button1"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/one" />

            <Button
                android:id="@+id/button2"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/two" />

            <Button
                android:id="@+id/button3"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/three" />

            <Button
                android:id="@+id/button16"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/C"
                android:textColor="#FF0000" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/button4"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/four" />

            <Button
                android:id="@+id/button5"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/five" />

            <Button
                android:id="@+id/button6"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/six" />

            <Button
                android:id="@+id/button11"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/add"
                android:textColor="#0000FF" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/button7"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/seven" />

            <Button
                android:id="@+id/button8"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/eight" />

            <Button
                android:id="@+id/button9"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/nine" />

            <Button
                android:id="@+id/button12"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/sub"
                android:textColor="#0000FF" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/button10"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/zero1" />

            <Button
                android:id="@+id/button17"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/dot"
                android:textColor="#FF0000" />

            <Button
                android:id="@+id/button13"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/symbol"
                android:textColor="#0000FF" />

            <Button
                android:id="@+id/button14"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/mul"
                android:textColor="#0000FF" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/button18"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/equal" />

            <Button
                android:id="@+id/button19"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/pow" />

            <Button
                android:id="@+id/button20"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/sqrt" />

            <Button
                android:id="@+id/button15"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/div"
                android:textColor="#0000FF" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/button21"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/sinx" />

            <Button
                android:id="@+id/button22"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/cosx" />

            <Button
                android:id="@+id/button23"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="@string/tanx" />
            
            <Button
                android:id="@+id/button24"
                android:layout_width="66dip"
                android:layout_height="66dip"
                android:text="log" />
        </LinearLayout>
    </TableLayout>

</LinearLayout>